--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMXJe5I9TL/pcQThrs0NTO/",
+      "authorship_tag": "ABX9TyNrtfvU9ZP8ggF8ACimna6E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,90 +29,547 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "h874FPs2VNap",
-        "outputId": "35fa446e-c847-4d02-b542-fe78b642a721"
+        "id": "m_t8jQM8ayBI",
+        "outputId": "4105d0cb-f8c5-45da-eb11-628c7544dcd0"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "p\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0.],\n",
+              "       [0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ],
       "source": [
-        "a=10\n",
-        "b=5.6\n",
-        "c='hello'\n",
-        "d='p'\n",
-        "print(d)"
+        "import numpy as np\n",
+        "a=np.zeros([5])\n",
+        "a\n",
+        "a=np.zeros([2,3])\n",
+        "a"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "a,b,c=1,2.2,\"hello\"\n",
-        "print(a)\n",
-        "print(b)\n",
-        "print(c)\n",
-        "x=y=z=\"parrot\"\n",
-        "print(x)\n",
-        "print(y)"
+        "\n",
+        "from numpy import random\n",
+        "a=random.randint(50,size=(2,3))\n",
+        "a"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "pBW2TqTnXPP8",
-        "outputId": "abc5796c-92e8-40ff-d465-320ef4fd5301"
+        "id": "IE5Rj31dbIzs",
+        "outputId": "a3212a39-404f-4aaf-8087-f28afee267b1"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2.2\n",
-            "hello\n",
-            "parrot\n",
-            "parrot\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[19, 12, 31],\n",
+              "       [31,  4, 25]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "x,y=33,4\n",
-        "x=x+y\n",
-        "y=x-y\n",
-        "x=x-y\n",
-        "print(x,y)"
+        "from numpy import random\n",
+        "a=random.choice([1,2,3],size=(2,3))\n",
+        "a"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "U8ZAtqE_ZFa1",
-        "outputId": "51c304b3-90df-429e-d08c-5a3efaeb1e9e"
+        "id": "aXWVfR_wc5HT",
+        "outputId": "7d7d20e0-27cd-44b3-93d1-5cef1306edb6"
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4 33\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[3, 1, 2],\n",
+              "       [1, 2, 2]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.matrix([[12,2,3],[1,2,3]])\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jP25qeDtdVJI",
+        "outputId": "2217ea42-0a86-4071-a6f9-d63aae6e5bf0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "matrix([[12,  2,  3],\n",
+              "        [ 1,  2,  3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.arange(1,10,2)\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aP8rP-DkdnKl",
+        "outputId": "dbd1a383-c5c4-4209-fae4-c1390d6b4646"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 3, 5, 7, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.array([[1,2,3],[1,2,3]])\n",
+        "a.ndim\n",
+        "a.shape\n",
+        "a.reshape(3,2)\n",
+        "a.flatten()\n",
+        "a.transpose()\n",
+        "a.reshape(3,2)\n",
+        "a.transpose()\n",
+        "x=np.arange(6).reshape((3,2))\n",
+        "np.transpose(x)\n",
+        "x=np.ones([1,2,3])\n",
+        "x\n",
+        "np.transpose(x,(2,0,1)).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nq6ESgYQeCUV",
+        "outputId": "2c78bae4-891c-4e6f-9183-4c3490b3b48a"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 1, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.array([1,2,34,5,6])\n",
+        "a[:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1nhWfaq1hkVV",
+        "outputId": "deaae466-097b-48b0-ac3c-0d43c5a9577a"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  2, 34,  5,  6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.array([[1,2,34],[5,6,7],[2,3,4]])\n",
+        "a[0:4:2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UiwZbttMic9k",
+        "outputId": "573f3ea6-1c85-4a69-aa04-80653296fcd4"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2, 34],\n",
+              "       [ 2,  3,  4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.array([[[1,2,3],[4,5,6],[1,2,3]],[[12,3,3],[1,2,3],[2,3,4]],[[1,2,3],[12,3,3],[1,2,3]]])\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WmBPQv0FeTy8",
+        "outputId": "adc4c52a-12f8-49ad-a147-6feb2b0bca66"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 1,  2,  3],\n",
+              "        [ 4,  5,  6],\n",
+              "        [ 1,  2,  3]],\n",
+              "\n",
+              "       [[12,  3,  3],\n",
+              "        [ 1,  2,  3],\n",
+              "        [ 2,  3,  4]],\n",
+              "\n",
+              "       [[ 1,  2,  3],\n",
+              "        [12,  3,  3],\n",
+              "        [ 1,  2,  3]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[:3,2:,:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "se-HILsUkpSl",
+        "outputId": "312c7b12-e34a-4fb1-9d74-2c947cc81342"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[1, 2, 3]],\n",
+              "\n",
+              "       [[2, 3, 4]],\n",
+              "\n",
+              "       [[1, 2, 3]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "data=pd.DataFrame(np.random.randn(40).reshape(10,4),columns=[\"one\",\"two\",\"three\",\"four\"])\n",
+        "data\n",
+        "ser=pd.Series(np.arange(1,11))\n",
+        "ser\n",
+        "d=pd.concat([ser,data],axis=1)\n",
+        "d\n",
+        "data[data<0]\n",
+        "data[\"total\"]=data.one+data.two+data.three+data.four\n",
+        "data[\"total\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L9V3TiBWnbmL",
+        "outputId": "fbd00799-cc75-4e23-81f0-6e6f08d375b5"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    1.278802\n",
+              "1   -0.619412\n",
+              "2   -1.812552\n",
+              "3    0.829187\n",
+              "4   -0.607180\n",
+              "5   -1.848630\n",
+              "6   -1.439398\n",
+              "7   -2.716779\n",
+              "8   -3.233648\n",
+              "9   -2.751081\n",
+              "Name: total, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "d=[[\"aa2\",2,4,'yes'],\n",
+        "    [\"aa3\",3,4,'no'],\n",
+        "     [\"www\",3,3,'no']]\n",
+        "d\n",
+        "df=pd.DataFrame(d,index=list(\"abc\"),columns=['name','score','attempts','qualify'])\n",
+        "df\n",
+        "roll=['2','2','3']\n",
+        "df['roll']=roll\n",
+        "df\n",
+        "df['name']=df['name'].replace('aa2','234')\n",
+        "df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "id": "dGKDu-ztphdw",
+        "outputId": "07ede7e0-4717-47d4-bdfd-262f61532085"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  name  score  attempts qualify roll\n",
+              "a  234      2         4     yes    2\n",
+              "b  aa3      3         4      no    2\n",
+              "c  www      3         3      no    3"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-f0ceb875-3ed1-4fc5-a458-9d7a49e35a57\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>score</th>\n",
+              "      <th>attempts</th>\n",
+              "      <th>qualify</th>\n",
+              "      <th>roll</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>a</th>\n",
+              "      <td>234</td>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>b</th>\n",
+              "      <td>aa3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>no</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c</th>\n",
+              "      <td>www</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>no</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f0ceb875-3ed1-4fc5-a458-9d7a49e35a57')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-f0ceb875-3ed1-4fc5-a458-9d7a49e35a57 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-f0ceb875-3ed1-4fc5-a458-9d7a49e35a57');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "jhHhDBUhsUle"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
